# skyline-ex

./: .gitignore  .gitmodules  exlaunch.sh
ex-build/: Cargo.toml
ex-build/src/: building.rs  env.rs  lib.rs
exlaunch/: config.json
exlaunch/misc/mk/: common.mk
exlaunch/misc/scripts/: deploy-ftp.py
exlaunch/source/lib/hook/nx64/: handlers.s  nx_hook.cpp  nx_hook.hpp  pointer_map.hpp
exlaunch/source/lib/init/: init.cpp
exlaunch/source/lib/nx/kernel/: jit.c
exlaunch/source/lib/reloc/: elf.hpp  rtld.hpp
exlaunch/source/lib/reloc/rtld/: ModuleObject.cpp  ModuleObject.hpp  ld.cpp
exlaunch/source/lib/util/sys/: mem_layout.cpp  mem_layout.hpp  rw_pages.cpp  rw_pages.hpp
exlaunch/source/program/: main.cpp  setting.hpp
misc/npdm-json/: application.json
skyline-ex/: Cargo.toml  build.rs  send.sh
skyline-ex/.cargo/: config.toml
skyline-ex/src/: alloc.rs  bootstrap.rs  exception.rs  exception_handler.s  ffi.rs  legacy.rs  lib.rs  logger.rs
source/lib/hook/nx64/: handlers.s  nx_hook.cpp
source/lib/nx/kernel/: virtmem.c
source/nn/fs/: fs_mount.hpp
