[package]
name = "skyline-ex"
version = "0.1.0"
edition = "2018"
authors = ["Shadów", "blujay", "Raytwo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nn = { path = "../../nn-rs" }
skyline = { git = "https://github.com/Skyline-ex/skylinex", features = ["static-module"] }
loader = { git = "https://github.com/Skyline-ex/loader" }
nnsdk = "0.2.0"
ninput = { git = "https://github.com/blu-dev/ninput", version = "0.1.0" }

[build-dependencies]
ex-build = { path = "../ex-build" }

[features]
tcp-logger = []
sd-logger = []
kernel-logger = []

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
